--- a/styles/tailwind.css
+++ b/styles/tailwind.css
@@ -1640,6 +1640,18 @@ select {
   margin-top: -18rem;
 }
 
+.mt-72 {
+  margin-top: 18rem;
+}
+
+.-mt-80 {
+  margin-top: -20rem;
+}
+
+.-mt-60 {
+  margin-top: -15rem;
+}
+
 .block {
   display: block;
 }
